--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/youtube-player": "^17.1.0",
     "@coreui/angular": "^4.7.10",
     "@ng-select/ng-select": "^12.0.6",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tots/ngx-org-chart": "^15.0.0",
     "autoprefixer": "^10.4.16",
     "choices.js": "^10.2.0",
     "feather-icons": "^4.29.1",
@@ -31,7 +33,6 @@
     "ngx-countup": "^13.1.0",
     "ngx-typed-js": "^2.1.1",
     "postcss-scss": "^4.0.9",
-    "@tailwindcss/forms": "^0.5.7",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.5",
     "tailwindcss": "^3.4.1",
